#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([SCPlay],[0.1],[code@chrisoneill.co.uk])
AC_CONFIG_HEADERS([config.h]) 
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
LT_INIT
AC_SUBST([LIBTOOL_DEPS])

# Checks for libraries.
AM_PATH_SDL

# Checks for header files.
AC_CHECK_HEADERS([string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_HEADER_STDBOOL

# Checks for library functions.
AC_CHECK_FUNCS([bzero])
AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([regcomp])
AC_CHECK_FUNCS([strchr])
AC_CHECK_FUNCS([strdup])
AC_CHECK_FUNCS([strstr])

AC_CONFIG_FILES([Makefile src/Makefile src/scplayerlib/Makefile src/scplay/Makefile])
AC_OUTPUT
