# Process this file with automake to generate a Makefile
#
noinst_LTLIBRARIES      = libscplayer.la
libscplayer_la_SOURCES  = SCPlayer.cpp SCPlayer.h etracker_bin.h SAASound.h
libscplayer_la_SOURCES += Z80.c Z80.h Z80Codes.h Z80DAA.h Z80IO.h
libscplayer_la_SOURCES += SAAAmp.cpp SAAAmp.h SAAEnv.cpp SAAEnv.h SAAFreq.cpp \
			  SAAFreq.dat SAAFreq.h SAAImpl.cpp SAAImpl.h \
			  SAANoise.cpp SAANoise.h SAASndC.cpp SAASound.cpp \
			  types.h
